--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
             width: 330px;
             height: 460px;
             overflow-y: scroll;
-            background-color: #e0e0e0;
+            background-color: #e0e9f4;
             font-family: Poppins, sans-serif;
         }
 
@@ -138,7 +138,7 @@
         .msg {
             display: flex;
             flex-direction: row;
-            margin-bottom: 10px;
+            margin-bottom: 4px;
         }
 
         .left-msg {
@@ -156,12 +156,12 @@
         }
         .msg-info {
             text-align: center;
-            margin-bottom: 5px;
+            margin-bottom: 0px;
         }
 
         .msg-info-name {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 0px;
             background-color: #f2f2f2;
             padding: 5px 10px;
             border-radius: 20px;
